--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 
-#color.blue {
-    color: blue;
+* {
+     padding: 0px;
+     margin: 0px;
+}
+.contact-form {
+    font-size: 25px;
+    background-color: black;
+    width:  50vw;
+    height: 100vh;
 }
 
