--- a/style.css
+++ b/style.css
@@ -2,17 +2,14 @@
   * {
     font-family: 'Stint Ultra Condensed', cursive;
     font-weight: 100;
+    font-size: 30px;
 } 
-.contact-form {
-   font-size: 35px;
+h2 {
+
+    background-color: #a22;
+    display: inline-block;
 }
-
-contact-form__p-h2{
-    font-size: 2em;
-    color: red;
-} 
-
-
+   
 
 
 
