--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ h2 {
 
     background-color: #a22;
     display: inline-block;
+   padding: 100px;
+   box-sizing: border-box;
+   text-align: center;
 }
    
 
