--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ h2 {
    margin: 20px 10px;
    border-radius: 2em;
    border: 5px solid #a33;
+   box-shadow: 30px 20px 10px 10px #000;
+   text-shadow: 2px 2px 7px #fff;
+   transform: rotate(-45deg);
 }
    
 
