--- a/style.css
+++ b/style.css
@@ -4,21 +4,16 @@
     font-weight: 100;
     font-size: 30px;
 } 
-h2 {
 
-    background-color: #a22;
+div{
+    width: 200px;
+    height: 200px;
+    background: yellow;
     display: inline-block;
-   padding: 100px;
-   box-sizing: border-box;
-   text-align: center;
-   margin: 20px 10px;
-   border-radius: 2em;
-   border: 5px solid #a33;
-   box-shadow: 30px 20px 10px 10px #000;
-   text-shadow: 2px 2px 7px #fff;
-   transform: rotate(-45deg);
 }
-   
+.caja3{
+    border: 5px solid blue;
+}
 
 
 
