--- a/style.css
+++ b/style.css
@@ -2,18 +2,17 @@
   * {
     font-family: 'Stint Ultra Condensed', cursive;
     font-weight: 100;
-    font-size: 30px;
+    font-size: 40px;
 } 
 
-div{
-    width: 200px;
-    height: 200px;
-    background: yellow;
-    display: inline-block;
+.caja-fixed {
+    background: red;
+    opacity: 0.3;
+    position: sticky;
+    top: -20px;
 }
-.caja3{
-    border: 5px solid blue;
-}
+
+
 
 
 
