--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@
     font-size: 40px;
 } 
 
-.caja-fixed {
-    background: red;
-    opacity: 0.3;
-    position: sticky;
-    top: -20px;
+b {
+    width: 200px;
+    height: 300px;
+    margin: 20px;
+    border: 10px solid red;
+    background: yellow;
+    display: inline-block;
 }
 
 
