--- a/style.css
+++ b/style.css
@@ -2,18 +2,31 @@
   * {
     font-family: 'Stint Ultra Condensed', cursive;
     font-weight: 100;
-    font-size: 40px;
+    font-size: 20px;
 } 
 
-b {
-    width: 200px;
-    height: 300px;
-    margin: 20px;
-    border: 10px solid red;
-    background: yellow;
-    display: inline-block;
+body{
+  background-color: azure;
 }
 
+
+form {
+  margin: 100px auto;
+  display: block;
+  background-color: #555;
+  padding: 100px;
+  width: 50%;
+}
+
+input {
+  padding: 6px;
+  width: 100%;
+}
+
+input::selection {
+  color: red;
+  background-color: yellow;
+}
 
 
 
