--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 } 
 
 body{
-  background-color: azure;
+  background-color: #000;
 }
 
 
@@ -14,14 +14,11 @@ body{
   margin: 45px;
   width: 200px;
   height: 300px;
-  border: 5px solid red;
-  background-color: pink;
-  cursor: pointer;
+  border: 5px solid #f00;
+  background: #ff0;
 }
 
-.caja:active {
-  cursor: row-resize;
-}
+
 
 
 
