--- a/style.css
+++ b/style.css
@@ -5,18 +5,34 @@
     font-size: 20px;
 } 
 
-body{
-  background-color: #000;
+div {
+  width: 45%;
+  display: inline-block;
+  padding: 20px;
+  background: #ddd;
+}
+
+h1 {
+  font-size: 24px;
+}
+
+.caja2 {
+  background: #bbb;
+}
+
+@media only screen and (max-width: 800px) {
+
+div {
+  display: block;
+  width: 100%;
+}
+
+h1 {
+  font-size: 20px !important;
+}
 }
 
 
-.caja {
-  margin: 45px;
-  width: 200px;
-  height: 300px;
-  border: 5px solid #f00;
-  background: #ff0;
-}
 
 
 
